<resources>
    <string name="app_name">VyapariEnterprise</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="close">Close</string>
    <string name="do_login">Login</string>
    <string name="username_email">username or email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobileno">Mobile No</string>
    <string name="password2">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="err_msg_nil">Missing information</string>
    <string name="err_msg_email">Incorrect email</string>
    <string name="err_msg_password">Missing password</string>
    <string name="usage_contract_message">By signing up, you agree with the terms and conditions.</string>
    <string name="register">Register</string>
    <string name="sale">Sales</string>
    <string name="sales">Sales Order</string>
    <string name="sales_dispacth">Sales Dispatch</string>
    <string name="sales_invoice">Sales Invoice</string>
    <string name="sales_return">Sales Return</string>
    <string name="Collection">Collections</string>
    <string name="payments">Payments</string>
    <string name="products">Materials / Services</string>
    <string name="firms">Customers / Suppliers</string>
    <string name="company">My Company</string>
    <string name="chat">Chat With Us</string>
    <string name="home">Home</string>
    <string name="Addcompany">Company Logo</string>
    <string name="Addsignature">Authorised Signature</string>
    <string name="Warehousescreation">Warehouses Creation</string>
    <string name="selectserver">Select Server to Connect</string>
    <string name="stagging">Stagging</string>
    <string name="production">Production</string>
    <string name="Description">Description</string>
    <string name="Note">Notes</string>
    <string name="Addpromocode">Promocode</string>
    <string name="Changepass">Change Password</string>
    <string name="DeactiveAccount">Deactive Account</string>
    <string name="Defaultaccount">Default Account</string>
    <string name="Mswipe">Mswipe</string>
    <string name="setting">Settings</string>
    <string name="Rate_us">Rate Us</string>
    <string name="search_sales_invoice">Search for sales invoice</string>
    <string name="search_sale_order">Search for sales order</string>
    <string name="search_sale_dispatch">Search for sales dispatch</string>
    <string name="search_sale_return">Search for sales return</string>
    <string name="search_collection">Search for collection invoice</string>
    <string name="search_payment">Search for payment invoice</string>
    <string name="search_purchase">Search for purchase invoice</string>
    <string name="search_order">Search for purchase order</string>
    <string name="search_receipt">Search for purchase receipt</string>
    <string name="search_return">Search for purchase return</string>
    <string name="search_hsn_sac_codes">Search for HSN/SAC</string>
    <string name="add_product">Add Materials / Services</string>
    <string name="update_inventory">Update Inventory</string>
    <string name="scrap">Scrap</string>
    <string name="empy_warn">Required fields can not be empty.</string>
    <string name="sales_Order">Sales Order</string>
    <string name="search_product">Search for product</string>
    <string name="search_inventory">Search for inventory</string>
    <string name="product_error">Material / Service Error</string>
    <string name="search_firm">Search for Customer / Supplier</string>
    <string name="support">Support</string>
    <string name="add_phone">Add phone number</string>
    <string name="add_phone_content">Please enter a phone number</string>
    <string name="add_phone_hint">+912227817979</string>
    <string name="add_email">Add email</string>
    <string name="add_email_content">Please enter a email.</string>
    <string name="add_email_hint">info@logoinfosoft.com</string>
    <string name="warn_empty_email">Please enter a valid email address.</string>
    <string name="warn_empty_phone">Please enter a valid phone number.</string>
    <string name="add">Add</string>
    <string name="isactive">IS ACTIVE</string>
    <string name="select_picture">Select picture</string>
    <string name="select_pos">Please select pos</string>
    <string name="select_firm">Select Customer / Supplier</string>
    <string name="gstin">GSTIN: </string>
    <string name="pan">PAN: </string>
    <string name="select_product">Select product</string>
    <string name="create_and_add_product">Add and save product</string>
    <string name="approve">Approve</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="percent">Percent</string>
    <string name="delete_discount">Remove discount</string>
    <string name="TYPE">TYPE*</string>
    <string name="HSN">HSN*</string>
    <string name="GST_CODE">GST Code*</string>
    <string name="select_GST_CODE">GST Code is mandatory</string>
    <string name="CESS_CODE">CESS Code</string>
    <string name="select_CESS_CODE">CESS is mandatory</string>
    <string name="select_Unit_CODE">UNIT is mandatory</string>
    <string name="select_HSN_CODE">HSN is mandatory</string>
    <string name="PRODUCT_NAME">PRODUCT NAME*</string>
    <string name="PRODUCT_CODE">PRODUCT CODE</string>
    <string name="UNIT_SET">UNIT SET*</string>
    <string name="UNIT">UNIT*</string>
    <string name="PURCHASE_PRICE">PURCHASE PRICE</string>
    <string name="UNIT_PRICE">UNIT PRICE</string>
    <string name="SALE_PRICE">SALE PRICE</string>
    <string name="deliverydate">DELIVERY DATE</string>
    <string name="QUANTITY">QUANTITY</string>
    <string name="Material">Material</string>
    <string name="quantity">Quantity</string>
    <string name="VALUE">VALUE</string>
    <string name="DISCOUNT_INFO">DISCOUNT INFO</string>
    <string name="DISCOUNT_TYPE">DISCOUNT TYPE</string>
    <string name="DISCOUNT">DISCOUNT</string>
    <string name="GENERAL_DISCOUNT">GEN. DISCOUNT</string>
    <string name="ADDRESS">ADDRESS*</string>
    <string name="PINCODE">PINCODE*</string>
    <string name="COUNTRY">COUNTRY*</string>
    <string name="STATE">STATE*</string>
    <string name="GL_connection_group">G/L Connection Group*</string>
    <string name="CITY">CITY</string>
    <string name="DISTRICT">DISTRICT</string>
    <string name="TAX_INFO">TAX INFO</string>
    <string name="GSTIN">GSTIN</string>
    <string name="PAN">PAN</string>
    <string name="PHONE_NUMBERS">PHONE NUMBERS</string>
    <string name="EMAIL_ADDRESSES">EMAIL ADDRESSES</string>
    <string name="DESCRIPTION">DESCRIPTION</string>
    <string name="AR_AP_ABOUT_NOTES">NOTES ABOUT THE CUSTOMER / SUPPLIER</string>
    <string name="EMPLOYEES">EMPLOYEES</string>
    <string name="employee">Employee</string>
    <string name="DELIVERY_ADDRESSES">DELIVERY ADDRESSES</string>
    <string name="address">Address</string>
    <string name="BANKS">BANKS</string>
    <string name="bank">Bank</string>
    <string name="BRANCH">BRANCH</string>
    <string name="BRANCH_CODE">BRANCH CODE</string>
    <string name="ACCOUNT_NUMBER">ACCOUNT NUMBER</string>
    <string name="IBAN">IBAN</string>
    <string name="JOB">JOB</string>
    <string name="PHONE">PHONE</string>
    <string name="EMAIL">EMAIL</string>
    <string name="NOTE">NOTE</string>
    <string name="documentnumber">Document Number</string>
    <string name="DOCUMENT_NUMBER">DOCUMENT_NUMBER</string>
    <string name="SHIPMENT_DATE">SHIPMENT_DATE</string>
    <string name="DOCUMENT_DATE">DOCUMENT_DATE</string>
    <string name="INVOICE_DATE">INVOICE_DATE</string>
    <string name="order_date">Order Date</string>
    <string name="ORDER_DATE">ORDER DATE</string>
    <string name="DATE">DATE</string>
    <string name="STATUS">STATUS</string>
    <string name="CUSTOMERSTATGING">CUSTOMER STAGING</string>
    <string name="PAYMENTMODE">PAYMENT MODE</string>
    <string name="COLLECTIONMODE">COLLECTION MODE</string>
    <string name="WAREHOUSEINVENTORY">WAREHOUSE INVENTORY MODE</string>
    <string name="CUSTOMERSUPPLIER">CUSTOMER / SUPPLIER</string>
    <string name="FORMTYPES">FORM TYPE</string>
    <string name="ORDERNO"> ORDER NO</string>
    <string name="DISPATCHNOS"> DISPATCH NO</string>
    <string name="PAYMENTSTATUS"> PAYMENT STATUS</string>
    <string name="COLLECTIONSTATUS"> COLLECTION STATUS</string>
    <string name="INVOICENO"> INVOICE NO</string>
    <string name="RETURNNO"> RETURN NO</string>
    <string name="RECEIPTNO"> RECEIPT NO</string>
    <string name="SLIPNO"> SLIP NO</string>
    <string name="CODE"> CODE</string>
    <string name="add_ar_ap">Add Customer / Supplier</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_arap">Add AR/AP</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="PAYMENT_DATE">PAYMENT DATE</string>
    <string name="Staging">Staging</string>
    <string name="different_delivery_address">Different delivery address</string>
    <string name="select_plus">+ Select</string>
    <string name="INVOICE_NUMBER">INVOICE NUMBER</string>
    <string name="WAREHOUSE">WAREHOUSE:</string>
    <string name="apply_discount">Apply Discount</string>
    <string name="TOTAL">TOTAL</string>
    <string name="total">Total:</string>
    <string name="dashboard">Dashboard</string>
    <string name="Filters">Filters</string>
    <string name="HighestGrossingMaterial">Highest Grossing Material</string>
    <string name="KeyCustomers">Key Customers</string>
    <string name="Customers">Customers</string>
    <string name="namaste">नमस्ते व्यापारी</string>
    <string name="netparty">Net Party Balance: </string>
    <string name="general_discount">General Discount:</string>
    <string name="collection_amount">Collection Amount</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="total_discount">Total Discount:</string>
    <string name="CESS">CESS:</string>
    <string name="CGST">CGST:</string>
    <string name="SGST">SGST:</string>
    <string name="IGST">IGST:</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="CESS2">CESS</string>
    <string name="CGST2">CGST</string>
    <string name="SGST2">SGST</string>
    <string name="IGST2">IGST</string>
    <string name="invoice_amount2">Invoice Amount:</string>
    <string name="CGST3">CGST (%s):</string>
    <string name="SGST3">SGST (%s):</string>
    <string name="IGST3">IGST (%s):</string>
    <string name="delete">Delete</string>
    <string name="is_active">Active</string>
    <string name="welcome">Welcome, </string>
    <string name="a_last_step">A LAST STEP</string>
    <string name="COMPANY">COMPANY</string>
    <string name="FORGOT_PASSWORD">FORGOT PASSWORD</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile_info">Profile Info</string>
    <string name="change_password">change password</string>
    <string name="REGISTER">REGISTER</string>
    <string name="name">Name</string>
    <string name="Province">Province</string>
    <string name="surname">Surname</string>
    <string name="company_name">Company Name</string>
    <string name="gst_reg_type">GST Registration Type</string>
    <string name="Organisation_type">Organisation Type</string>
    <string name="promocode">Promocode</string>
    <string name="other">Type your company sector</string>
    <string name="promo">Promotion Distributor</string>
    <string name="applycode">APPLY CODE</string>
    <string name="companylogo">Upload company logo</string>
    <string name="or">or</string>
</resources>