<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/left_menu_bg"
    android:padding="10dp">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:padding="10dp"
        android:textSize="20dp"
        android:textColor="@color/white"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/warehouse_creation"
            style="@style/nav_item_style"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/add_authorise_signature" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Warehousescreation"
                android:padding="10dp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/Add_autho_signature"
        style="@style/nav_item_style"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/add_authorise_signature" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Addsignature"
            android:padding="10dp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_pass"
        style="@style/nav_item_style"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/change_password" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Changepass"
            android:padding="10dp"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Default_accpunts"
        style="@style/nav_item_style"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/defaultaccount" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Defaultaccount"
            android:padding="10dp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/mswipe"-->
        <!--style="@style/nav_item_style"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
            <!--android:layout_width="25dp"-->
            <!--android:layout_height="25dp"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:visibility="invisible"-->
            <!--android:src="@drawable/deactive_account" />-->

        <!--<TextView-->

            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/mswipe"-->
            <!--android:padding="10dp"-->
            <!--android:textColor="@color/white"/>-->

    <!--</LinearLayout>-->

    </LinearLayout>


</ScrollView>







</LinearLayout>